--- a/s/so/soc/socialreviver.net.html
+++ b/s/so/soc/socialreviver.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the socialreviver.net privacy policy that was archived on 2013-08-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130820224205id_/http%3A//www.socialreviver.net/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the socialreviver.net privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214054253id_/http%3A//www.socialreviver.net/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -20,30 +20,33 @@
 <meta name="wot-verification" content="3cf8f2dc5315beb3210f">
 <meta name="format-detection" content="telephone=no">
 <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/bfipfkeoidmndggnnpobeenlamiclald">
-<link rel="stylesheet" type="text/css" href="/static/style/sidebardisabler.css?_m=1376382445">
-<noscript><link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Righteous"></noscript>
+<link rel="stylesheet" type="text/css" href="/static/style/sidebardisabler.css?_m=1391336695">
+<noscript><link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Righteous"></noscript>
 <script async="" src="https://ssl.google-analytics.com/ga.js"></script><script>WebFontConfig={google:{families:['Righteous']}};</script>
-<script src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
 <script src="/static/js/jquery.js"></script>
+<script src="/static/js/jquery.vittgam2014contactdialog.js"></script>
 <script>var _paq=_paq||[];_paq.push(['setSiteId',17]);_paq.push(['setTrackerUrl',"http:\/\/www.socialreviver.net"+'/stats/js/']);_paq.push(['setCookieDomain','.socialreviver.net']);_paq.push(['trackPageView']);_paq.push(['enableLinkTracking']);</script><script src="http://www.socialreviver.net/stats/js/" defer="" async=""></script><noscript><img src="http://www.socialreviver.net/stats/js/?idsite=17" width="1" height="1" style="position:absolute;top:-9999px;left:-9999px;width:1px;height:1px"></noscript>
 <script src="/showads.js"></script><script>(function(){try{if(window.asdload123!==456){new Image().src='/becmpdlmph.php?_r='+(+new Date())}}catch(e){}})();</script>
+<script async="" src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
 jQuery(function($){
 	$(document).on('click','a.homeoldchangelogshowlink',function(){
 		$('#homeoldchangelog').add($(this)).toggle('slow');
 		return false;
 	});
-	$(document).on('click','a.uninstallguideshowlink',function(){
-		if (typeof window.history.replaceState==='function') {
-			window.history.replaceState('',null,$(this).attr('href'));
-		}
-		$(this).attr('href',"\/privacy"+(!$('#uninstallguide').is(':hidden') ? "?"+'showuninstallguide=1#uninstallguideshowlink' : ''));
-		$('#uninstallguide').toggle('slow');
+	$(document).on('click','a.disableguideshowlink',function(){
+		$('#disableguide').toggle('slow');
+		return false;
+	});
+	$(document).on('click','a.removalguideshowlink',function(){
+		$('#removalguide').toggle('slow');
 		return false;
 	});
 	$('#scrollwrapper').focus();
 });
 </script>
+<script>vittgam2014contactdialog('a.contactlink','contact',"Loading...");</script>
 <script>var _gaq = _gaq||[];_gaq.push(['_setAccount','UA-24972974-1']);_gaq.push(['_setDomainName','.socialreviver.net']);_gaq.push(['_trackPageview']);(function(){var ga=document.createElement('script');ga.async=true;ga.src=(document.location.protocol=='https:' ? 'https://ssl' : 'http://www')+'.google-analytics.com/ga.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ga,s);})();</script>
 </head>
 <body class="green lang-en">
@@ -61,15 +64,11 @@ jQuery(function($){
 		<ul>
 			<li><a href=".">Home</a></li>
 			<li><a href="terms">Terms of use</a></li>
-			<li><a href="https://support.vittgam.net/open.php?type=6" target="_blank">Contact Us</a></li>
+			<li><a href="contact" class="contactlink">Contact Us</a></li>
 			<li><a href="bewareofcopies" class="bold cred">BEWARE OF COPIES! Click for more info</a></li>
 		</ul>
 		<ul class="right">
 			<li id="securelink"><a href="https://www.socialreviver.net/privacy" class="cgreen"><img src="/static/images/greenpadlock.png">Go to the HTTPS Website</a></li>
-			<!--li>
-				<a id="counterparent" style="display:none"><span id="counter"></span> visits</a>
-				<script>(function(){var oldcount=null;var update=function(addvisit){var xmlhttp=new XMLHttpRequest();if(!('withCredentials'in xmlhttp)){return}xmlhttp.open((addvisit?'POST':'GET'),'http://data.socialreviver.net/jscounter.php?page_id='+encodeURIComponent("privacy"),true);xmlhttp.onload=function(){try{var response=JSON.parse(this.responseText)}catch(e){return}if ((!oldcount)||(oldcount!=response.count)){document.getElementById('counter')['innerText']=response.count;document.getElementById('counterparent').style.display='block'}oldcount=response.count;window.setTimeout(function(){update(0)},1500,false)};if(addvisit){xmlhttp.setRequestHeader('Content-Type','application/x-www-form-urlencoded; charset=UTF-8');}xmlhttp.send((addvisit?'addvisit=1':null));xmlhttp=null};update(1)})();</script>
-			</li-->
 			<li id="topbarlang">
 				<a><img src="/static/images/flag-en-small.png"></a>
 				<ul class="dropdown">
@@ -79,18 +78,7 @@ jQuery(function($){
 			</li>
 		</ul>
 	</div>
-	<div id="topads">
-		<script type="text/javascript"><!--
-		google_ad_client = "ca-pub-5776079633024604";
-		/* SocialReviver 468x60 */
-		google_ad_slot = "5996063547";
-		google_ad_width = 468;
-		google_ad_height = 60;
-		//-->
-		</script>
-		<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
-	</div>
+	<div id="topads"><!-- SocialReviver 468x60 --><ins class="adsbygoogle" style="display:inline-block;width:468px;height:60px" data-ad-client="ca-pub-5776079633024604" data-ad-slot="5996063547"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
 	<div id="page">
 		<div class="clearfix">
 			<div id="sidebar">
@@ -101,18 +89,7 @@ jQuery(function($){
 						<iframe src="http://data.socialreviver.net/socialreviver_like.htm" scrolling="no" style="overflow:hidden;width:100%;height:60px;border:none;margin:0;padding:0"></iframe>					</li>
 					<li>
 						<h2>Ads</h2>
-						<div class="sidebarads">
-							<script type="text/javascript"><!--
-							google_ad_client = "ca-pub-5776079633024604";
-							/* SocialReviver 300x250 */
-							google_ad_slot = "0882571331";
-							google_ad_width = 300;
-							google_ad_height = 250;
-							//-->
-							</script>
-							<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-							</script>
-						</div>
+						<div class="sidebarads"><!-- SocialReviver 300x250 --><ins class="adsbygoogle" style="display:inline-block;width:300px;height:250px" data-ad-client="ca-pub-5776079633024604" data-ad-slot="0882571331"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
 					</li>
 					<li>
 						<h2>COMPUTER BILD</h2>
@@ -138,7 +115,7 @@ jQuery(function($){
 				<h2>Privacy Policy for socialreviver.net</h2>
 				<p class="bold">At socialreviver.net, the privacy of our visitors is of extreme importance to us. This privacy policy document outlines the types of personal information is received and collected by socialreviver.net and how it is used.</p>
 				<p class="bold">Please note that the domains socialreviver.net, socialreviver.com, socialreviver.org and socialreviver.info point to the same website and are controlled by us, so this privacy policy applies to all of the domains cited above.</p>
-				<p class="bold">If you require any more information or have any questions about our privacy policy, please feel free to contact us at <a href="https://support.vittgam.net/open.php?type=6" target="_blank">https://support.vittgam.net/open.php?type=6</a>.</p>
+				<p class="bold">If you require any more information or have any questions about our privacy policy, please feel free to contact us at <a href="contact" class="contactlink">this page</a>.</p>
 				<p class="bold">An Italian version of the privacy policy for Italian users is available <a href="/it/privacy">here</a>.</p>
 				<p class="bold"><u>This privacy policy only applies to this website. To see the terms of use for the extension please <a href="terms">click here</a>.</u></p>
 				<h3>Log Files</h3>
@@ -156,34 +133,24 @@ jQuery(function($){
 				<p>You should consult the respective privacy policies of these third-party ad servers for more detailed information on their practices as well as for instructions about how to opt-out of certain practices. socialreviver.net's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites.</p>
 				<p>If you wish to disable cookies, you may do so through your individual browser options. More detailed information about cookie management with specific web browsers can be found at the browsers' respective websites.</p>			</div>
 		</div>
-		<div class="bottomads">
-			<script type="text/javascript"><!--
-			google_ad_client = "ca-pub-5776079633024604";
-			/* SocialReviver 728x90 */
-			google_ad_slot = "6029671485";
-			google_ad_width = 728;
-			google_ad_height = 90;
-			//-->
-			</script>
-			<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-			</script>
-		</div>
+		<div class="bottomads"><!-- SocialReviver 728x90 --><ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-5776079633024604" data-ad-slot="6029671485"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
 	</div>
-	<p id="footer"><nobr>SocialReviver is Copyright © 2013 <a href="https://www.vittgam.net/">VittGam.net</a>. All rights reserved.</nobr> <nobr><a href="privacy">Privacy Policy</a> &amp; <a href="cookie-info">info about cookies</a>.</nobr><br><nobr><b>The extension is not an official product from Facebook, Inc.</b></nobr> <nobr>SocialReviver is a VittGam.net product and was not made by Facebook, Inc.</nobr> <nobr>Facebook is a registered trademark of Facebook, Inc.</nobr></p>
+	<p id="footer"><nobr>SocialReviver is Copyright © 2014 <a href="https://www.vittgam.net/">VittGam.net</a>. All rights reserved.</nobr> <nobr><a href="privacy">Privacy Policy</a> &amp; <a href="cookie-info">info about cookies</a>.</nobr><br><nobr><b>The extension is not an official product from Facebook, Inc.</b></nobr> <nobr>SocialReviver is a VittGam.net product and was not made by Facebook, Inc.</nobr> <nobr>Facebook is a registered trademark of Facebook, Inc.</nobr></p>
 </div>
 </div>
 
 <!-- Page info:
-- Serving server:	server5
-- Requesting IP:	207.241.237.225
+- Serving server:	server4
+- Requesting IP:	207.241.237.102
 - Request user agent:	Mozilla/5.0 (compatible; archive.org_bot +http://www.archive.org/details/archive.org_bot)
 - Request browser type:	unknown
 - Request browser name:	(null)
-- Request date/time:	Tue, 20 Aug 2013 22:42:05 GMT
-- Last modified on:	Tue, 13 Aug 2013 08:27:25 GMT
-- Request exec time:	0.00082088 seconds
-- Request CPU time:	0.00000000
-- Goats Teleported:	too many
+- Request date/time:	Fri, 14 Feb 2014 05:42:53 GMT
+- Last modified on:	Sun, 02 Feb 2014 10:24:55 GMT
+- Path info:		privacy
+- Request exec time:	0.00197792 seconds
+- Request CPU time:	2.02232594
+- Goats Teleported:	913,711
 -->
 
 </body></html>
