--- a/m/mi/mil/milfaholic.com.html
+++ b/m/mi/mil/milfaholic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the milfaholic.com privacy policy that was archived on 2013-09-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130913121405id_/http%3A//www.milfaholic.com/%3Fwm_login%3Dadmin%26ps%3Ds%26page%3Dpp%26from%3Ds4) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the milfaholic.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214054429id_/http%3A//www.milfaholic.com/%3Fwm_login%3Dadmin%26ps%3Ds%26page%3Dpp%26from%3Ds5) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -17,39 +17,40 @@
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <link href="http://fonts.googleapis.com/css?family=Oswald:400,700|Arimo:400,700" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="files/s4/css/default.css">
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript" src="files/s4/scripts/jquery-1.7.min.js"></script>
-<script type="text/javascript" src="files/s4/scripts/main.js"></script>
+<link rel="stylesheet" type="text/css" href="files/s5/css/default.css">
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="files/s5/scripts/main.js"></script>
 </head>
 <body>
 <!--header-->
-
 <div id="mainHdr">
 <div class="ctr">
 <div class="mainHdrLft">
 <h1 id="mainLogo">Milfaholic</h1>
-<p>Over 1 Million MILFs</p>
 </div>
 <div class="mainHdrRgt">
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-var js, fjs = d.getElementsByTagName(s)[0];
-if (d.getElementById(id)) return;
-js = d.createElement(s); js.id = id;
-js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<fb:like send="true" layout="button_count" width="450" show_faces="false"></fb:like>
+<div class="rgt">
+<div class="socials">
+<div class="fbk"><span class="soc">
+<span><fb:like show-faces="false"></fb:like></span>
+</span><span class="counter"><span><span>22,688</span></span></span></div>          
+</div>
+</div>
+<p><strong>50,329</strong> New Members Today</p>
 </div>
 </div>
 </div>
 <!--end header--> 
 <!--main content-->
-<div id="mainCont">
-<div class="ctr clrd"> 
+<div id="mainCont" class="innerCont">
+<div class="ctr clrd">
 <br>
-<font color="#000000" size="-1">  
-<br>
+<font color="#ffffff" size="-1">  
+<style type="text/css">
+
+.pp-container p {margin:0 0 1.5em; padding:0; line-height: 22px;}
+</style>
+<div class="pp-container">
 <b>OUR WEB SITE PRIVACY POLICY</b>
 <br><br>
 We have created this Privacy Policy in order to demonstrate our firm
@@ -63,16 +64,7 @@ and conditions of our Web site.
 <br><br>
 <b>WHAT TYPE INFORMATION IS COLLECTED?</b> <br>
 <b>Personal Information</b> <br>
-We only collect personal information from visitors to our Web site when
-they voluntarily provide it to us by completing our registration form
-or electing to use one of our services. We may require visitors to provide
-us with information including, but not limited to, their name, physical
-address, email address, birth date, credit card number, credit card
-expiration date, username, password, and on occasion a unique identifier
-(such as their mother's maiden name). Credit Card information is not
-stored or collected by us; rather by the payment processing company
-identified on the join page and transmitted via Secure Socket Layer
-technology. Your credit card information is NEVER shared.
+We only collect personal information from visitors to our Web site when they voluntarily provide it to us by completing our registration form or electing to use one of our services. We may require visitors to provide us with additional information to verify their identity to assist in the event of a lost user name or password (such as mother's maiden name). Credit Card information is not stored or collected by us; rather this information is collected by the payment processing company identified on the join page and transmitted via Secure Socket Layer technology. Your credit card information is NEVER known to us and cannot be shared by us.
 <br><br>
 <b>Non-Personal Information</b> <br>
 When visitors access our Web site, certain non-personal information may be collected from them including, but not limited to, their browser type (e.g., Chrome or Internet Explorer), operating system (e.g., Windows or Macintosh), IP address, and the domain name from which they accessed the site (e.g., google).  In addition, we may collect information
@@ -196,34 +188,38 @@ and contact us via Email.
 <br><br><b>HOW CAN YOU CONTACT THE WEB SITE OPERATOR?</b> <br>
 Visitors who have any questions about this Privacy Policy, the practices
 of this site, or their interactions with this Web site, should visit
-the Customer Service section of this site and contact us via Email.<br>
-</font> 
-</div>
-</div>
+the Customer Service section of this site and contact us via Email.
+</div><br> 
+</font></div><font color="#ffffff" size="-1">
+</font></div><font color="#ffffff" size="-1">
 <!--end main content--> 
 <!--main footer-->
-<div id="mainFtr">
+<div id="mainFtr" class="innerFtr">
+<p>Milfaholic.com - Find a hot MILF or mature wife in your city that is horny and ready for sex. First locate a hot MILF and then get that hot nude wife in your bed! You will be happy to know that the hot MILF you have watched down the street has her husband telling you "fuck my wife". Yes its true that many mature ladies are also ready for fast sex action. We could call them cheating wives but really they are just swingers that want to satisfy their hot desires. So start today and meet a real local horny MILF! Create your free profile and start browsing thousands of lonely MILF's &amp; hookup for sex tonight! </p>
 <ul>
-<li>© 2013Milfaholic.com - All Rights Reserved - </li>
-<li><a href="?wm_login=admin&amp;ps=s&amp;page=login&amp;from=s4"><strong>Member Login</strong></a> </li>    
-<li>| <a href="http://datingsitesupport.com/" target="_blank">Customer Service</a></li>
-<li>| <a href="?wm_login=admin&amp;ps=s&amp;page=terms&amp;from=s4">Terms of Service</a></li>
-<li>| <a href="?wm_login=admin&amp;ps=s&amp;page=pp&amp;from=s4">Privacy Policy</a></li>
+<li>© 2014&nbsp;Milfaholic.com / </li>
+<li><a href="?wm_login=admin&amp;ps=s&amp;page=login&amp;from=s5" rel="nofollow">Member Login</a> </li>
+ 
+<li>/ <a href="http://www.datingsitesupport.com/" rel="nofollow" target="_blank">Customer Service</a></li>
+<li>/ <a href="?wm_login=admin&amp;ps=s&amp;page=terms&amp;from=s5" rel="nofollow">Terms of Service</a></li>
+<li>/ <a href="?wm_login=admin&amp;ps=s&amp;page=pp&amp;from=s5" rel="nofollow">Privacy Policy</a></li>
 </ul>
 </div>
+<!--end main footer--> 
+
 <script language="JavaScript" type="text/javascript"> 
 function cpaDP() { 
 var ifrm = document.createElement("IFRAME"); 
-ifrm.setAttribute("src", "http://5.10.66.130/pixel.cgi?s=2752938&p=admin&a=&cmp=&org=dzm77lbhaaormoboqvg8&rt=0_clickJS&rf=" + encodeURIComponent(document.referrer) + "&rd="); 
+ifrm.setAttribute("src", "http://5.10.66.130/pixel.cgi?s=5067151&p=admin&a=&cmp=&org=dzm77lbhaaormoboqvg8&rt=0_clickJS&rf=" + encodeURIComponent(document.referrer) + "&rd=http%3A%2F%2Fwww.milfaholic.com%2F"); 
 ifrm.style.width = 1 + "px"; 
 ifrm.style.height = 1 + "px"; 
 ifrm.frameBorder = 0; 
 document.body.appendChild(ifrm); 
 } 
 cpaDP(); 
-</script><iframe src="http://5.10.66.130/pixel.cgi?s=2752938&amp;p=admin&amp;a=&amp;cmp=&amp;org=dzm77lbhaaormoboqvg8&amp;rt=0_clickJS&amp;rf=&amp;rd=" frameborder="0" style="width: 1px; height: 1px;"></iframe> 
+</script> 
 <noscript>
-<img src="http://5.10.66.130/pixel.cgi?s=2752938&p=admin&a=&cmp=&org=dzm77lbhaaormoboqvg8&rt=2_clickIMG&rd=">
+<img src="http://5.10.66.130/pixel.cgi?s=5067151&p=admin&a=&cmp=&org=dzm77lbhaaormoboqvg8&rt=2_clickIMG&rd=http%3A%2F%2Fwww.milfaholic.com%2F">
 </noscript><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -233,8 +229,6 @@ cpaDP();
   ga('create', 'UA-42584415-10', 'miflaholic.com');
   ga('send', 'pageview');
 
-</script><!--end main footer-->
-
-
+</script>
 	
-</body></html>
+</font><iframe src="http://5.10.66.130/pixel.cgi?s=5067151&amp;p=admin&amp;a=&amp;cmp=&amp;org=dzm77lbhaaormoboqvg8&amp;rt=0_clickJS&amp;rf=&amp;rd=http%3A%2F%2Fwww.milfaholic.com%2F" frameborder="0" style="width: 1px; height: 1px;"></iframe></body></html>
