--- a/b/bl/bli/blingo.com.html
+++ b/b/bl/bli/blingo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the blingo.com privacy policy that was archived on 2013-10-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131020104514id_/http%3A//www.blingo.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the blingo.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214055759id_/http%3A//www.blingo.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 
@@ -8,8 +8,8 @@
 <title>Privacy Policy | Instant Win Prizes from Searching, Free Online Sweepstakes | PCHSearchAndWin</title>
 
 
-<link rel="stylesheet" href="http://static.blingo.com/version/118/shared/styles.css">
-<link rel="stylesheet" href="http://static.blingo.com/version/118/ext.css">
+<link rel="stylesheet" href="http://static.blingo.com/version/117/shared/styles.css">
+<link rel="stylesheet" href="http://static.blingo.com/version/117/ext.css">
 
 
 
@@ -283,10 +283,10 @@ claims.</p>
 	| <a href="/rules">Rules</a>
 	| <a href="/privacy">Privacy Policy</a><br>
 </div>
-<!-- One -->
+<!-- Two -->
 
 
-<div class="copyright" id="copyright">Copyright © 2004-2013 Blingo, Inc.
+<div class="copyright" id="copyright">Copyright © 2004-2014 Blingo, Inc.
 
 <div class="disclosure">All trademarks and
 registered trademarks appearing on this site are the property of their
