--- a/b/bu/bus/business-online-guidance.com.html
+++ b/b/bu/bus/business-online-guidance.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the business-online-guidance.com privacy policy that was archived on 2013-08-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130806022946id_/http%3A//www.business-online-guidance.com/privacy-policy-disclaimer.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the business-online-guidance.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214061620id_/http%3A//www.business-online-guidance.com/privacy-policy-disclaimer.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml"><head><meta http-equiv="content-type" content="text/html; charset=UTF-8"><title>Privacy Policy Disclaimer For Business Online Guidance</title><meta name="keywords" content="Privacy Policy Disclaimer For Business Online Guidance"><meta name="description" content="Privacy policy and disclaimer for business online guidance, please read"><link href="/sd/support-files/style.css" rel="stylesheet" type="text/css"><script type="text/javascript" async="" src="https://www.google.com/cse/cse.js?cx=011224704988490760065:f71lpkekigk"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/sd/support-files/mobile.js"></script>
-    <script type="text/javascript">        MOBILE.contentColumnWidth = '';        MOBILE.init();
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml"><head><meta http-equiv="content-type" content="text/html; charset=UTF-8"><title>Privacy Policy Disclaimer For Business Online Guidance</title><meta name="keywords" content="Privacy Policy Disclaimer For Business Online Guidance"><meta name="description" content="Privacy policy and disclaimer for business online guidance, please read"><link href="/sd/support-files/style.css" rel="stylesheet" type="text/css"><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/sd/support-files/mobile.js"></script>
+    <script type="text/javascript">        MOBILE.contentColumnWidth = '595px';        MOBILE.init();
     </script><meta name="viewport" content="maximum-scale=1">
 <!-- start: tool_blocks.sbi_html_head -->
 <link rel="canonical" href="http://www.business-online-guidance.com/privacy-policy-disclaimer.html">
@@ -28,9 +28,9 @@
         var fifteenDays = 1000*60*60*24*15;
         var expires = new Date((new Date()).valueOf() + fifteenDays);
         document.cookie = "visited=true;expires=" + expires.toUTCString();
-    $.colorbox({width:"480px", inline:true, href:"#subscribe"});
+    $.colorbox({width:"570px", inline:true, href:"#subscribe"});
         }
-}, 15000);
+}, 9900000000);
 }
 );
 </script>
@@ -219,31 +219,7 @@ www.business-online-guidance.com   has been obtained. </p>
 <!-- start: shared_blocks.54473#top-of-nav-column --><!-- end: shared_blocks.54473#top-of-nav-column -->
 <!-- start: shared_blocks.54469#navigation -->
 
-<!-- start: tool_blocks.navbar -->
-    <div class="Navigation"><ul><li class="navbar_home"><a href="/">Home</a></li></ul><h3>START!</h3><ul><li><a href="/start-an-online-business.html">START HERE!</a></li><li><a href="/resources-and-tools.html">Resources &amp; Tools</a></li><li><a href="/business-online-blog.html">What's New!</a></li></ul><h3>e-Biz Opportunities</h3><ul><li><a href="/online-business-ideas.html">e-Biz Ideas</a></li><li><a href="/sitesell.html">SiteSell</a></li><li><a href="/introduction-to-ecommerce.html">eCommerce</a></li><li><a href="/create-a-newsletter.html">Creating an eZine</a></li><li><a href="/youtube-marketing.html">YouTube Marketing</a></li><li><a href="/content-marketing.html">Content Marketing</a></li><li><a href="/online-mlm-business.html">Online MLM</a></li><li><a href="/make-money-blogging.html">Blogging</a></li></ul><h3>Building Your Site</h3><ul><li><a href="/create-your-own-website.html">Create Your Website</a></li><li><a href="/how-to-find-a-niche.html">How to Find a Niche</a></li><li><a href="/unique-selling-proposition.html">Unique Selling Proposition</a></li><li><a href="/domain-and-web-hosting.html">Web Hosting</a></li><li><a href="/how-to-use-wordpress.html">How to Use WordPress</a></li><li><a href="/getting-backlinks.html">Getting Backlinks</a></li><li><a href="/increase-internet-traffic.html">Build Traffic</a></li><li><a href="/marketing-an-online-business.html">Marketing Online</a></li><li><a href="/how-to-publish-a-newsletter.html">Publish a Newsletter</a></li><li><a href="/what-is-social-media.html">Social Media</a></li></ul><h3>Monetizing </h3><ul><li><a href="/make-money-from-your-website.html">Monetize Your Site</a></li><li><a href="/affiliate-marketing-for-dummies.html">Affiliate Marketing</a></li><li><a href="/what-is-google-adsense.html">Google Adsense</a></li></ul><h3>Copywriting</h3><ul><li><a href="/online-copywriting.html">Web Copywriting</a></li><li><a href="/copywriting-resources.html">Resources</a></li><li><a href="/copywriting-headlines.html">Copywriting Headlines</a></li></ul><h3>Working for Yourself</h3><ul><li><a href="/work-at-home-moms.html">Work at Home Moms!</a></li><li><a href="/online-entrepreneur.html">Online Entrepreneurship</a></li><li><a href="/passive-income-opportunities.html">Passive Income</a></li><li><a href="/work-from-home-scams.html">Scams to Avoid</a></li></ul><h3>Site</h3><ul><li><a href="/about.html">About Me</a></li><li><a href="/contact.html">Contact</a></li><li><a href="/online-business-faq.html">FAQ</a></li><li><a href="/ebusiness-newsletter.html">Your Ticket to Freedom</a></li><li><a href="/best-pages.html">Income Reports</a></li></ul></div>
-    <!-- end: tool_blocks.navbar -->
-<!-- start: shared_blocks.86415631#br -->
-<br>
-<!-- end: shared_blocks.86415631#br -->
-<p style="text-align: center;"><span style="font-size: 16.2333px;"><b>Search </b></span><br></p>
-<!-- start: shared_blocks.92000160#Google Custom Search Bar1 -->
-<!-- Put the following javascript before the closing </head> tag. -->
-<script>
-  (function() {
-    var cx = '011224704988490760065:f71lpkekigk';
-    var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
-    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//www.google.com/cse/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-
-<!-- Place this tag where you want the search box to render -->
-<gcse:searchbox-only></gcse:searchbox-only>
-<!-- end: shared_blocks.92000160#Google Custom Search Bar1 -->
-<!-- start: shared_blocks.86415631#br -->
-<br>
-<!-- end: shared_blocks.86415631#br -->
+<!-- start: tool_blocks.navbar --><div class="Navigation"><ul><li><a href="/">Home</a></li></ul><h3>START!</h3><ul><li><a href="/start-an-online-business.html">START HERE!</a></li><li><a href="/resources-and-tools.html">Resources &amp; Tools</a></li><li><a href="/business-online-blog.html">What's New!</a></li></ul><h3>e-Biz Opportunities</h3><ul><li><a href="/online-business-ideas.html">e-Biz Ideas</a></li><li><a href="/sitesell.html">SiteSell</a></li><li><a href="/introduction-to-ecommerce.html">eCommerce</a></li><li><a href="/create-a-newsletter.html">Creating an eZine</a></li><li><a href="/youtube-marketing.html">YouTube Marketing</a></li><li><a href="/content-marketing.html">Content Marketing</a></li><li><a href="/online-mlm-business.html">Online MLM</a></li><li><a href="/make-money-blogging.html">Blogging</a></li></ul><h3>Building Your Site</h3><ul><li><a href="/create-your-own-website.html">Create Your Website</a></li><li><a href="/how-to-find-a-niche.html">How to Find a Niche</a></li><li><a href="/unique-selling-proposition.html">Unique Selling Proposition</a></li><li><a href="/domain-and-web-hosting.html">Web Hosting</a></li><li><a href="/how-to-use-wordpress.html">How to Use WordPress</a></li><li><a href="/getting-backlinks.html">Getting Backlinks</a></li><li><a href="/increase-internet-traffic.html">Build Traffic</a></li><li><a href="/marketing-an-online-business.html">Marketing Online</a></li><li><a href="/how-to-publish-a-newsletter.html">Publish a Newsletter</a></li><li><a href="/what-is-social-media.html">Social Media</a></li></ul><h3>Monetizing</h3><ul><li><a href="/make-money-from-your-website.html">Monetize Your Site</a></li><li><a href="/affiliate-marketing-for-dummies.html">Affiliate Marketing</a></li><li><a href="/what-is-google-adsense.html">Google Adsense</a></li></ul><h3>Copywriting</h3><ul><li><a href="/online-copywriting.html">Web Copywriting</a></li><li><a href="/copywriting-resources.html">Resources</a></li><li><a href="/copywriting-headlines.html">Copywriting Headlines</a></li></ul><h3>Working for Yourself</h3><ul><li><a href="/legitimate-work-from-home-ideas.html">Legitimate Jobs</a></li><li><a href="/work-at-home-moms.html">Work at Home Moms!</a></li><li><a href="/online-entrepreneur.html">Online Entrepreneurship</a></li><li><a href="/passive-income-opportunities.html">Passive Income</a></li><li><a href="/work-from-home-scams.html">Scams to Avoid</a></li></ul><h3>Site</h3><ul><li><a href="/about.html">About Me</a></li><li><a href="/contact.html">Contact</a></li><li><a href="/online-business-faq.html">FAQ</a></li><li><a href="/ebusiness-newsletter.html">Your Ticket to Freedom</a></li><li><a href="/best-pages.html">Articles</a></li></ul></div><!-- end: tool_blocks.navbar -->
 <!-- start: shared_blocks.86415631#br -->
 <br>
 <!-- end: shared_blocks.86415631#br -->
@@ -277,15 +253,8 @@ www.business-online-guidance.com   has been obtained. </p>
 <form accept-charset="utf-8" action="http://www.business-online-guidance.com/cgi-bin/mailout/mailmgr.cgi" method="post">
 <input type="hidden" name="list_id" value="21109713">
 <input type="hidden" name="action" value="subscribe">
-<center><font size="3"><b>Get My FREE eBooks!</b></font></center><ul>
-	<li>Your Ultimate Guide to Building an Online Business</li></ul><ul><li>The Beginner's Guide to Affiliate Marketing</li></ul><ul><li>The Complete Guide to Google AdSense</li></ul><ul><li>The Newbie's Guide to Persuasive Copywriting</li></ul><ul><li>The Ultimate Guide to Content Marketing</li></ul><ul><li>Your A to Z Guide to Starting a Newsletter</li>
-</ul><table cellpadding="0" cellspacing="0" border="0" align="" bgcolor="#eae7d7">
+<center><font size="3" color="#3a5c5f"><b>Get My Most Popular eBook Package <font color="#eb5c3c">Instant FREE Access </font>(7 PDFs)<font color="#eb5c3c"></font></b></font></center><b><font size="2"><ol><li>My "Secret Weapon": How I Earn Over $2k per month</li><li>Your A-Z Guide to Building an eBusiness</li><li>The Ultimate Guide to Google AdSense</li><li>The Newbie's Guide to Persuasive Copywriting</li><li>The Beginner's Guide to Affiliate Marketing</li><li>The Ultimate Guide to Content Marketing</li><li>Your A-Z Guide to Starting a Newsletter</li></ol></font><br></b><table cellpadding="0" cellspacing="3" border="0" align="" bgcolor="#eae7d7">
 <tbody><tr>
-	
-	
-	
-	
-	
 <td valign="top" align="center"><b>Your Email</b><br><input name="email" type="text" size="22"><br>
 <b>Your Name</b><br>
 <input name="name" type="text" size="22"><br>
@@ -342,10 +311,8 @@ www.business-online-guidance.com   has been obtained. </p>
 <div style="display:none">
                <div id="subscribe" style="padding: 5px; background:#eae7d7;">
 <center> 
-<font face="verdana" size="4"><b>Sign up below and get <font color="#eb5c3c">instant free access</font> to my most popular eBook package (6 PDFs)!</b></font><br><br>
-
-<img align="center" src="http://www.business-online-guidance.com/images/signup-bonus2.png">
-
+<font face="tahoma" color="#3a5c5f" size="5"><b>Get My Most Popular eBook Package <font color="#eb5c3c">[Instant FREE Access]</font> (7 PDFs)<br></b></font><b><br>
+<img align="center" src="http://www.business-online-guidance.com/images/newsletter-offer-ebooks3.png" width="320">
                   <div id="subs-container" class="clearfix">
  <!-- start: tool_blocks.ezine --><form accept-charset="utf-8" action="http://www.business-online-guidance.com/cgi-bin/mailout/mailmgr.cgi" method="post">
 <input type="hidden" name="list_id" value="21109713">
@@ -365,20 +332,20 @@ www.business-online-guidance.com   has been obtained. </p>
 </form>
 <!-- end: tool_blocks.ezine -->
                    </div>
-               </center></div>
-        </div>
+               </b></center></div><b>
+        </b></div><b>
 
 <!-- end: shared_blocks.54458#footer -->
-</div><!-- end Liner -->
-      </div><!-- end Footer -->
+</b></div><!-- end Liner --><b>
+      </b></div><!-- end Footer --><b>
 
-    </div><!-- end PageWrapper -->
+    </b></div><!-- end PageWrapper --><b>
 
     <script type="text/javascript">
         FIX.doEndOfBody();MOBILE.doEndOfBody();    </script>
 <!-- start: tool_blocks.sbi_html_body_end --><!-- end: tool_blocks.sbi_html_body_end -->
-<!-- Generated at 16:18:47 24-Jul-2013 -->
+<!-- Generated at 16:01:44 01-Feb-2014 -->
 
 
 
-</body></html>
+</b></body></html>
